--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ gtk4 = { version = "0.9.6", features = ["v4_16"] }
 gtk4-layer-shell = "0.5.0"
 log = "0.4.27"
 relm4 = "0.9.1"
+ron = "0.10.1"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
+xdg = "3.0.0"
 zbus = { version = "5.7.1", features = ["tokio"] }
