--- a/systemd/yand.service
+++ b/systemd/yand.service
@@ -2,12 +2,14 @@
 Description=Yet Another Notification Daemon
 PartOf=graphical-session.target
 After=graphical-session.target
+BindsTo=graphical-session.target
+Requisite=graphical-session.target
 
 [Service]
 Type=dbus
 BusName=org.freedesktop.Notifications
-ExecCondition=/bin/sh '[ -n "$WAYLAND_DISPLAY" ]'
 ExecStart=/usr/bin/yand
+ConditionEnvironment=WAYLAND_DISPLAY
 
 [Install]
 WantedBy=graphical-session.target
