--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,19 @@ name = "yand"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "yandctl"
+path = "src/yandctl.rs"
+
 [dependencies]
+clap = { version = "4.5.39", features = ["derive"] }
 colog = "1.3.0"
 gtk4 = { version = "0.9.6", features = ["v4_16"] }
 gtk4-layer-shell = "0.5.0"
 log = "0.4.27"
 relm4 = "0.9.1"
 serde = { version = "1.0.219", features = ["derive"] }
-tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
 toml = "0.8.22"
 xdg = "3.0.0"
 zbus = { version = "5.7.1", features = ["tokio"] }
